frontend/src/assets/stylesheets/spot_detail.css
@import 'variables.css';

.spot-index-item-detail-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  height: 100%; 
  /* padding: 0 450px;  */ 
}

.thumbnail-photos-wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 55vh; 
}

.spot-detail.main-image-wrapper {
  position: relative;
  width: 50%;
  height: 100%;
  overflow: hidden;
  margin-right: 0.5em;
}

.spot-detail.main-image-wrapper img {
  width: 100%;
  height: 100%;
}

.spot-detail.main-image-wrapper img:hover {
  transform: scale(1.10);
  transition: transform 1s;
  cursor: pointer;
}

.side-image-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: space-between;
  width: 50%;
  height: 100%;
}

.side-image-wrapper .image-wrapper {
  position: relative;
  width: 49.2%;
  height: 49%;
  overflow: hidden;
}

.side-image-wrapper .image-wrapper img {
  transform: scale(1.5);
  width: 100%;
}

.side-image-wrapper .image-wrapper img:hover {
  transform: scale(1.7);
  transition: transform 1s;
  cursor: pointer;
}

.side-image-wrapper .image-wrapper .overlay-wrapper,
.spot-detail.main-image-wrapper .overlay-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.4);
  opacity: 0;
  z-index: -1;
} 

.view-images-wrapper button {
  position: absolute;
  top: 65%;
  left: 80%;
  z-index: 1;
  font-family: 'cerealMedium';
  font-size: 0.938em;
  color: var(--medium-gray);
  background: white;
  border: none;
  padding: 0.5em 	0.938em;
  border-radius: 0.3em; 
}

.spot-index-item-detail-wrapper .thumbnail-photos-wrapper .view-images-wrapper button:hover {
  cursor: pointer;
}

.spot-index-item-detail-wrapper .thumbnail-photos-wrapper:hover div:not(:hover) .overlay-wrapper {
  opacity: 1;
  z-index: 1;
  transition: opacity 0.5s;
}  

.spot-index-item-detail-wrapper .spot-index-item-detail-header {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;
  margin-top: 2%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 53%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .header .name-wrapper h1 {
  font-family: 'cerealMedium';
  font-size: 32px;
  letter-spacing: 0.5px;
  color: var(--medium-gray); 
  width: 70%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .header .profile-image-wrapper img {
  width: 62px;
  border-radius: 50%;
  margin-left: -60px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .price {
  width: 30%;
  height: 60px; 
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  border: 1px solid var(--outline-gray);
  margin-left: 10%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .price p {
  font-family: 'cerealMedium';
  color: var(--medium-gray);
  font-size: 12px;
  margin-left: 7%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .price p span {
  font-family: 'cerealMedium';
  color: var(--medium-gray);
  font-size: 24px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-location-wrapper p {
  font-family: 'cerealLight';
  font-size: 15px;
  color: var(--medium-gray);
  margin-top: 10px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper {
  width: 55%;
  margin-right: 100px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper .header-details-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;
  border-bottom: 1px solid var(--underline-gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper .header-details-wrapper p {
  font-family: 'cerealLight';
  font-size: 16px;
  color: var(--dark-gray);
  margin: 20px 25px 0 0;
  padding-bottom: 20px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks {
  border-bottom: 1px solid var(--underline-gray);
  margin-top: 30px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .image-wrapper .star-icon img {
  width: 23px;
  margin-right: 17px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .perk-wrapper h3 {
  font-family: 'cerealRegular';
  font-size: 16px;
  color: var(--medium-gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .perk-wrapper p {
  font-family: 'cerealLight';
  font-size: 14px;
  color: var(--gray);
  margin-top: 5px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-top: 20px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper .image-wrapper .cleaner-icon img {
  width: 15px;
  margin-right: 25px;
}
/* ... */

